--- a/static-web/index.html
+++ b/static-web/index.html
@@ -495,11 +495,11 @@
                             <label for="roomId">Room</label>
                             <select id="roomId" name="roomId" class="form-control" required>
                                 <option value="">Select a room</option>
-                                <option value="Conference Room A">Conference Room A</option>
-                                <option value="Conference Room B">Conference Room B</option>
-                                <option value="Meeting Room 101">Meeting Room 101</option>
-                                <option value="Executive Suite">Executive Suite</option>
-                                <option value="Collaboration Space">Collaboration Space</option>
+                                <option value="1">Conference Room A</option>
+                                <option value="2">Conference Room B</option>
+                                <option value="3">Meeting Room 101</option>
+                                <option value="4">Executive Suite</option>
+                                <option value="5">Collaboration Space</option>
                             </select>
                         </div>
 
@@ -718,8 +718,9 @@
                         const start = booking.startTime || booking.start || new Date().toISOString();
                         const end = booking.endTime || booking.end || new Date(new Date(start).getTime() + 3600000).toISOString();
 
-                        // Only use the room name field
-                        const roomName = booking.room || 'Conference Room A';
+                        // Get room information - could be in roomId or room field
+                        const roomId = booking.roomId || '1';
+                        const roomName = booking.room || getRoomName(roomId);
                         const attendees = booking.attendees || 1;
                         const description = booking.description || '';
 
@@ -827,8 +828,8 @@
                     return startTime < tomorrow && endTime > today;
                 });
 
-                const bookedRooms = new Set(todayBookings.map(booking => booking.room));
-                const availableRooms = 5 - bookedRooms.size;
+                const bookedRoomIds = new Set(todayBookings.map(booking => booking.roomId));
+                const availableRooms = 5 - bookedRoomIds.size;
                 availableRoomsEl.textContent = availableRooms;
 
                 // Update upcoming bookings list
@@ -850,7 +851,7 @@
                         li.innerHTML = `
                             <div class="booking-title">${booking.title}</div>
                             <div class="booking-time">${startTime.toLocaleString()} - ${endTime.toLocaleString()}</div>
-                            <div class="booking-room">${booking.room || 'Unknown Room'}</div>
+                            <div class="booking-room">${booking.room || getRoomName(booking.roomId) || 'Unknown Room'}</div>
                         `;
                         bookingsListEl.appendChild(li);
                     });
@@ -868,14 +869,16 @@
 
             const formData = new FormData(bookingForm);
 
-            // Get the selected room value (which is now the room name)
-            const roomName = formData.get('roomId');
+            // Get the selected room ID and name
+            const roomId = formData.get('roomId');
+            const roomSelect = document.getElementById('roomId');
+            const roomName = roomSelect.options[roomSelect.selectedIndex].text;
 
             // Format the booking data to match the API expectations
             const bookingData = {
                 userId: formData.get('userId'),
-                // Don't include roomId at all, just use room name
-                room: roomName,
+                roomId: roomId,    // Use the numeric room ID
+                room: roomName,    // Also include room name for display
                 title: formData.get('title'),
                 startTime: new Date(formData.get('startTime')).toISOString(),
                 endTime: new Date(formData.get('endTime')).toISOString(),
